# Ish

./: .aliases  .gitignore  CMakeLists.txt  README.md  Text.txt  test.cpp  text.txt
TestUnit/: test  text.txt
TestUnit/test1/: text
include/: AliasManager.hpp  Builtins.hpp  Command.hpp  CommandModel.hpp  Environment.hpp  Executing.hpp  Executor.hpp  JobControl.hpp  Lexer.hpp  Parser.hpp  Parsing.hpp  Redirection.hpp  ShellContext.hpp  Signal.hpp  Types.hpp  UI.hpp  token.hpp
src/: AliasManager.cpp  Builtins.cpp  Environment.cpp  Executing.cpp  Executor.cpp  JobControl.cpp  Lexer.cpp  Parser.cpp  Parsing.cpp  Redirection.cpp  ShellContext.cpp  Signal.cpp  UI.cpp  main.cpp
